# audbackend

./: .buildinfo  .coveragerc.Linux  .coveragerc.Windows  .coveragerc.macOS  .coveragerc.python3.12  .coveragerc.python3.14  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  api.html  authentication.html  changelog.html  contributing.html  developer-guide.html  genindex.html  index.html  install.html  legacy.html  minio-parallel.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  usage.html
.doctrees/: api.doctree  authentication.doctree  changelog.doctree  contributing.doctree  developer-guide.doctree  genindex.doctree  index.doctree  install.doctree  legacy.doctree  usage.doctree
.doctrees/api/: audbackend.Artifactory.doctree  audbackend.Backend.doctree  audbackend.BackendError.doctree  audbackend.FileSystem.doctree  audbackend.Repository.doctree  audbackend.access.doctree  audbackend.available.doctree  audbackend.backend.Artifactory.doctree  audbackend.backend.Base.doctree  audbackend.backend.FileSystem.doctree  audbackend.backend.Minio.doctree  audbackend.backend.doctree  audbackend.checksum.doctree  audbackend.create.doctree  audbackend.delete.doctree  audbackend.doctree  audbackend.interface.Base.doctree  audbackend.interface.Maven.doctree  audbackend.interface.Unversioned.doctree  audbackend.interface.Versioned.doctree  audbackend.interface.doctree  audbackend.register.doctree
.github/workflows/: doc.yml  linter.yml  publish.yml  test.yml
_modules/: index.html
_modules/audbackend/core/: api.html  artifactory.html  backend.html  errors.html  filesystem.html  repository.html  utils.html
_modules/audbackend/core/backend/: artifactory.html  base.html  filesystem.html  minio.html
_modules/audbackend/core/interface/: base.html  maven.html  unversioned.html  versioned.html
_sources/: api.rst.txt  developer-guide.rst.txt  index.rst.txt  install.rst.txt  legacy.rst.txt  usage.rst.txt
_sources/api/: audbackend.Artifactory.rst.txt  audbackend.Backend.rst.txt  audbackend.BackendError.rst.txt  audbackend.FileSystem.rst.txt  audbackend.Repository.rst.txt  audbackend.access.rst.txt  audbackend.available.rst.txt  audbackend.backend.Artifactory.rst.txt  audbackend.backend.Base.rst.txt  audbackend.backend.FileSystem.rst.txt  audbackend.backend.Minio.rst.txt  audbackend.backend.rst.txt  audbackend.checksum.rst.txt  audbackend.create.rst.txt  audbackend.delete.rst.txt  audbackend.interface.Base.rst.txt  audbackend.interface.Maven.rst.txt  audbackend.interface.Unversioned.rst.txt  audbackend.interface.Versioned.rst.txt  audbackend.register.rst.txt  audbackend.rst.txt
api/: audbackend.Artifactory.html  audbackend.Backend.html  audbackend.BackendError.html  audbackend.FileSystem.html  audbackend.Repository.html  audbackend.access.html  audbackend.available.html  audbackend.backend.Artifactory.html  audbackend.backend.Base.html  audbackend.backend.FileSystem.html  audbackend.backend.Minio.html  audbackend.backend.html  audbackend.checksum.html  audbackend.create.html  audbackend.delete.html  audbackend.html  audbackend.interface.Base.html  audbackend.interface.Maven.html  audbackend.interface.Unversioned.html  audbackend.interface.Versioned.html  audbackend.interface.html  audbackend.register.html
audb_artifactory/: __init__.py
audb_artifactory/core/: backend.py
audbackend/: __init__.py
audbackend/backend/: __init__.py
audbackend/core/: api.py  artifactory.py  backend.py  base.py  conftest.py  errors.py  filesystem.py  http2.py  interface.py  maven.py  repository.py  unversioned.py  utils.py  versioned.py
audbackend/core/backend/: _artifactory_rest.py  artifactory.py  base.py  base_auth.py  filesystem.py  minio.py
audbackend/core/interface/: base.py  maven.py  unversioned.py  versioned.py
audbackend/interface/: __init__.py
benchmark/: README.md  benchmark_artifactory.py
benchmark/results/: main-dohq.csv  main-dohq.md  rest-api.csv  rest-api.md
benchmarks/: README.rst  minio-parallel.py
docs/: api.rst  authentication.rst  conf.py  conftest.py  developer-guide.rst  index.rst  install.rst  legacy.rst  requirements.txt  usage.rst
docs/api-src/: audbackend.backend.rst  audbackend.interface.rst  audbackend.rst
tests/: bad_file_system.py  conftest.py  requirements.txt  singlefolder.py  test_api.py  test_artifactory.py  test_async_download.py  test_backend.py  test_backend_artifactory.py  test_backend_base.py  test_backend_filesystem.py  test_backend_filesystem_only.py  test_backend_minio.py  test_base.py  test_broken_filesystem.py  test_filesystem.py  test_filesystem_only.py  test_http2.py  test_interface_maven.py  test_interface_unversioned.py  test_interface_versioned.py  test_legacy_import.py  test_maven.py  test_repository.py  test_unversioned.py  test_utils.py  test_validate.py  test_versioned.py
tests/misc/: cleanup_artifactory.py
