# ===== PROJECT ===========================================================
#
[project]
name = 'audbackend'
authors = [
    {name = 'Johannes Wagner'},
    {name = 'Hagen Wierstorf', email = 'hwierstorf@audeering.com'},
    {name = 'Christian Geng', email = 'cgeng@audeering.com'},
]
description = 'Backends to access Artifactory and local file system'
readme = 'README.rst'
license = 'MIT'
license-files = ['LICENSE']
keywords = [
    'artifactory',
    'filesystem',
    'minio',
    's3',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering',
]
requires-python = '>=3.10'
dependencies = [
    'audeer >=1.20.0',
    'pywin32; sys_platform == "win32"',
]
# Get version dynamically from git
# (needs setuptools_scm tools config below)
dynamic = ['version']

[project.optional-dependencies]
artifactory = [
    'dohq-artifactory >=1.0.1; python_version < "3.14"',
]
minio = [
    'minio !=7.2.19',
]
all = [
    'dohq-artifactory >=1.0.1; python_version < "3.14"',
    'minio',
]


[project.urls]
repository = 'https://github.com/audeering/audbackend/'
documentation = 'https://audeering.github.io/audbackend/'


# ===== Dependency groups =================================================
[dependency-groups]
dev = [
    'audeer >=2.2.1',
    'audformat',
    'dohq-artifactory >=1.0.1; python_version < "3.14"',
    'minio',
    'pytest',
    'pytest-cov',
    'sphinx',
    'sphinx-apipages',
    'sphinx-audeering-theme >=1.2.1',
    'sphinx-autodoc-typehints',
    'sphinx-copybutton',
    'sybil',
    'toml',
]
test-filesystem = [
    'audformat',
    'pytest',
    'pytest-cov',
]


# ===== BUILD-SYSTEM ======================================================
#
# Requirements for building the Python package
[build-system]
requires = ['setuptools>=45', 'setuptools_scm[toml]>=6.2']
build-backend = 'setuptools.build_meta'


# ===== TOOL ==============================================================
#

# ----- codespell ---------------------------------------------------------
[tool.codespell]
builtin = 'clear,rare,informal,usage,names'
skip = './audbackend.egg-info,./build,.docs/api,./docs/_templates'


# ----- pytest ------------------------------------------------------------
#
[tool.pytest.ini_options]
cache_dir = '.cache/pytest'
xfail_strict = true
addopts = '''
    --cov=audbackend
    --cov-fail-under=100
    --cov-report term-missing
    --cov-report xml
    --ignore=tests/misc/
    --ignore=tests/test_backend_filesystem_only.py
'''


# ----- ruff --------------------------------------------------------------
#
[tool.ruff]
cache-dir = '.cache/ruff'

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    'D',     # pydocstyle
    'E',     # pycodestyle errors
    'F',     # Pyflakes
    'I',     # isort
    'N',     # pep8-naming
    'W',     # pycodestyle warnings
]

extend-ignore = [
    'D100',  # Missing docstring in public module
    'D103',  # Missing docstring in public function
    'D104',  # Missing docstring in public package
    'D107',  # Missing docstring in `__init__`
]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = [
    'F401',  # * imported but unused
    'I001',  # Import block is un-sorted or un-formatted
]
'audbackend/core/conftest.py' = [
    'D101',  # Missing docstring in public class
    'D105',  # Missing docstring in magic method
]
'tests/singlefolder.py' = [
    'D105',  # Missing docstring in magic method
]


# ----- I: isort -----
#
# Check correct order/syntax of import statements
#
[tool.ruff.lint.isort]

# All from imports have their own line, e.g.
#
#   from .utils import util_a
#   from .utils import util_b
#
force-single-line = true

# Sort by module names
# and not import before from, e.g.
#
#     from datetime import date
#     import os
#
force-sort-within-sections = true

# Ensure we have two empty lines
# after last import
lines-after-imports = 2

# Group all audEERING packages into a separate section, e.g.
#
#     import os
#
#     import numpy as np
#
#     import audbackend
#
section-order = [
    'future',
    'standard-library',
    'third-party',
    'audeering',
    'first-party',
    'local-folder',
]
known-local-folder = [
    'bad_file_system',
    'singlefolder',
]
[tool.ruff.lint.isort.sections]
'audeering' = [
    'audb',
    'audeer',
    'audfactory',
    'audformat',
    'audiofile',
    'audinterface',
    'audmath',
    'audmetric',
    'audobject',
    'audonnx',
    'audplot',
    'audresample',
    'audtorch',
    'opensmile',
    'sphinx-audeering-theme',
]


# ----- N: pep8-naming -----
#
# Check variable/class names follow PEP8 naming convention
#
[tool.ruff.lint.pep8-naming]
ignore-names = [
    'config',  # allow lowercase class name
    'test_*',  # allow uppercase name when testing a class
]


# ----- W: pycodestyle -----
#
# Check docstrings follow selected convention
#
[tool.ruff.lint.pydocstyle]
convention = 'google'


# ----- setuptools --------------------------------------------------------
#
# Find all (sub-)modules of the Python package
[tool.setuptools.packages.find]

# ----- setuptools_scm ----------------------------------------------------
#
# Use setuptools_scm to get version from git
[tool.setuptools_scm]
