[metadata]
name = audb-artifactory
author = Johannes Wagner, Hagen Wierstorf
author-email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://gitlab.audeering.com/tools/audb-artifactory
project-urls =
    Documentation = http://tools.pp.audeering.com/audb-artifactory/
description = Artifactort backend for audb
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = LICENSE
keywords = audio, database, annotation
platforms= any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Researcher
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audfactory >=0.7.0,<0.9.0,!=0.8.0
    audb2 >=0.91.0
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audb_artifactory
    --cov-fail-under=100
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
