[metadata]
name = audbackend
author = Johannes Wagner, Hagen Wierstorf
author-email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audbackend/
project-urls =
    Documentation = https://audeering.github.io/audbackend/
description = Backends to access Artifactory and local file system
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = LICENSE
keywords = artifactory. filesystem
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.12.0
    audfactory >=1.0.3
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audbackend
    --cov-fail-under=100
    --cov-report term-missing
    --cov-report xml
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
