[metadata]
name = audbackend
author = Johannes Wagner, Hagen Wierstorf
author_email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audbackend/
project_urls =
    Documentation = https://audeering.github.io/audbackend/
description = Backends to access Artifactory and local file system
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = artifactory. filesystem
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.17.1
    audfactory >=1.0.12
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --cov=audbackend
    --cov-fail-under=100
    --cov-report term-missing
    --cov-report xml
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
